fix: restringir endpoints, unicidade de email e padronizacao dos testes
- Apenas POST /user e publico; GET, PUT e DELETE /user exigem autenticacao
- Email unico por usuario: validacao no service (create/update) com HTTP 409 e DuplicateEmailException
- Testes: @WithMockUser nos endpoints autenticados, correcao de mock inconsistente, remocao de teste duplicado e padronizacao de helpers e imports
- README: versao Spring Boot 3.x para 4.x e documentacao do HTTP 409

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>